added padding and fixed color to intro

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,8 @@
 .info
 {
-	background-color:#e5b5e4;
+	background-color:#aaa9cb;
 	border: solid;
 	border-width:10px;
 	border-color:#1d103e;
+	padding-left: 2.5cm;
 }
