color fix and a centering test

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,32 +1,33 @@
 .info
 {
-	background-color: #aaa9cb;
+	background-color: #a2c9e4;
 	border: solid;
 	border-width: 10px;
-	border-color: #1d103e;
+	border-color: #0181c8;
 	padding-left: 2.5cm;
+	padding-right: 2.5cm;
 }
 .school
 {
-	background-color: #aaa9cb;
+	background-color: #a2c9e4;
 	border: solid;
 	border-width: 10px;
-	border-color: #1d103e;
+	border-color: #0181c8;
 	padding-left: 2.5cm;
 }
 .awards-etc
 {
-	background-color: #aaa9cb;
+	background-color: #a2c9e4;
 	border: solid;
 	border-width: 10px;
-	border-color: #1d103e;
+	border-color: #0181c8;
 	padding-left: 2.5cm;
 }
 .work-experience
 {
-	background-color: #aaa9cb;
+	background-color: #a2c9e4;
 	border: solid;
 	border-width: 10px;
-	border-color: #1d103e;
+	border-color: #0181c8;
 	padding-left: 2.5cm;
 }
