--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,8 @@
 	border-width: 10px;
 	border-color: #0181c8;
 	padding-left: 2.5cm;
-	margin: auto;
+	margin-top: 12px;
+	margin-bottom: 6px;
 }
 .school
 {
@@ -14,6 +15,7 @@
 	border-width: 10px;
 	border-color: #0181c8;
 	padding-left: 2.5cm;
+	margin-top: 6px;
 }
 .awards-etc
 {
