--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,8 +5,6 @@
 	border-width: 10px;
 	border-color: #0181c8;
 	padding-left: 2.5cm;
-	margin-top: 12px;
-	margin-bottom: 6px;
 }
 .school
 {
@@ -15,7 +13,10 @@
 	border-width: 10px;
 	border-color: #0181c8;
 	padding-left: 2.5cm;
-	margin-top: 6px;
+}
+.school h3
+{
+	background-color: #f7e7c6;
 }
 .awards-etc
 {
@@ -25,6 +26,10 @@
 	border-color: #0181c8;
 	padding-left: 2.5cm;
 }
+.awards-etc h3
+{
+	background-color: #f7e7c6;
+}
 .work-experience
 {
 	background-color: #a2c9e4;
@@ -32,4 +37,8 @@
 	border-width: 10px;
 	border-color: #0181c8;
 	padding-left: 2.5cm;
+}
+.work-experience h3
+{
+	background-color: #f7e7c6;
 }
