--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,10 +35,10 @@
 h1
 {
 	color: #064055;
-	font-weight: bold;
+	font-weight: bolder;
 }
 h2
 {
 	color: #064055;
-	font-weight: bold;
+	font-weight: bolder;
 }
