--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,11 +16,6 @@
 	padding-left: 2.5cm;
 }
 
-.school p
-{
-	list-style-type: square;
-}
-
 .awards-etc
 {
 	background-color: #a2c9e4;
@@ -30,7 +25,7 @@
 	padding-left: 2.5cm;
 }
 
-.awards-etc p
+ol.mcnair-list
 {
 	list-style-type: square;
 }
@@ -44,18 +39,15 @@
 	padding-left: 2.5cm;
 }
 
-.work-experience p
-{
-	list-style-type: square;
-}
-
 h1
 {
 	color: #064055;
 	font-weight: bolder;
+	text-decoration: underline;
 }
 h2
 {
 	color: #064055;
 	font-weight: bolder;
+	text-decoration: underline;
 }
