added background image

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,8 @@
+body
+{
+	background-image: url("http://clippingfile.com/wp-content/uploads/2010/10/CF-background-1.jpg");
+}
+
 .info
 {
 	background-color: #a2c9e4;
