--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body
 {
-	background-image: url("http://clippingfile.com/wp-content/uploads/2010/10/CF-background-1.jpg");
+	background-image: url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSYe2O3qNGqdVkdcxT27VaZayfJwKMUoBBZAGkjL_NeY1RPS0EyKQ");
 }
 
 .info
