--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
 body
 {
 	background-image: url("https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSYe2O3qNGqdVkdcxT27VaZayfJwKMUoBBZAGkjL_NeY1RPS0EyKQ");
+	background-repeat: no-repeat;
 }
 
 .info
