trying alternate yellow background

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body
 {
-	background-image: url("http://clippingfile.com/wp-content/uploads/2010/10/CF-background-1.jpg");
+	background-image: url("http://coolblackppt.com/wp-content/uploads/2013/08/Yellow-parchment-paper-texture-picture-free-photograph-photos.jpg");
 }
 
 .info
