--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,11 @@ body
 	background-image: url("http://coolblackppt.com/wp-content/uploads/2013/08/Yellow-parchment-paper-texture-picture-free-photograph-photos.jpg");
 }
 
+h1, h2, h3, h4, li, p
+{
+	margin: 15px auto 15px auto;
+}
+
 header
 {
 	background-color: #a2c9e4;
@@ -11,8 +16,6 @@ header
 	border-color: #0181c8;
 	padding-left: 2.5cm;
 	max-width: 25cm;
-	margin-right: auto;
-	margin-left: 4cm;
 }
 
 figure
@@ -29,8 +32,6 @@ figure
 	border-color: #0181c8;
 	padding-left: 2.5cm;
 	max-width:25cm;
-	margin-right: auto;
-	margin-left: 4cm;
 }
 
 ol.school-list
@@ -47,8 +48,6 @@ ol.school-list
 	border-color: #0181c8;
 	padding-left: 2.5cm;
 	max-width:25cm;
-	margin-right:auto;
-	margin-left: 4cm;
 }
 
 ol.mcnair-list
@@ -77,8 +76,6 @@ ol.awards-list
 	border-color: #0181c8;
 	padding-left: 2.5cm;
 	max-width: 25cm;
-	margin-right: auto;
-	margin-left: 4cm;
 }
 
 ol.music-librarian-list
