--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,8 +20,7 @@ header
 
 figure
 {
-	background: url("http://imgfave-chat-herokuapp-com.global.ssl.fastly.net/image_cache/1307217989769774.jpg") top center no-repeat;
-	float: right;
+	float: left;
 	background-size: 75%;
 }
 .school
