--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,11 +18,6 @@ header
 	max-width: 25cm;
 }
 
-figure
-{
-	float: left;
-	background-size: 75%;
-}
 .school
 {
 	background-color: #a2c9e4;
@@ -39,7 +34,7 @@ ol.school-list
 	max-width: 16cm;
 }
 
-.awards-etc
+section
 {
 	background-color: #a2c9e4;
 	border: solid;
