--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,13 +34,7 @@ article
 	max-width: 16cm;
 }
 
-h1
-{
-	color: #064055;
-	font-weight: bolder;
-	text-decoration: underline;
-}
-h2
+h1, h2
 {
 	color: #064055;
 	font-weight: bolder;
