--- a/stylesheet.css
+++ b/stylesheet.css
@@ -55,4 +55,11 @@ h1, h2
 	color: #064055;
 	font-weight: bolder;
 	text-decoration: underline;
+	font-size: 32px;
+}
+h3{
+	font-size: 24px;
+}
+h4 {
+	font-size: 18px;
 }
