--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,9 +57,15 @@ h1, h2
 	text-decoration: underline;
 	font-size: 32px;
 }
+
+h2 {
+	font-size: 24px;
+}
+
 h3{
 	font-size: 24px;
 }
+
 h4 {
 	font-size: 18px;
 }
