--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,7 +20,8 @@ section, article
 
 figure {
 	background: #000 url(http://imgfave-chat-herokuapp-com.global.ssl.fastly.net/image_cache/1307217989769774.jpg) center center no-repeat;
-	float: right;
+	background-size: 75%;
+	color: #fff;
 }
 
 header
